--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Link to Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/9a929b7098.js" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>Farm Fresh Produce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app!</noscript>
